--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
 				</div>
 				<div class="subscribe">
 					<p class="subscribe-text">Subscribe</p>
-					<form method="post" enctype="multipart/form-data">
+					<form method="post" class="subscribe-form" enctype="multipart/form-data">
 						<label for="sub-email" class="form-label">
 							<input type="email" id="sub-email" name="sub-email" placeholder="E-mail" class="email">
 						</label>
@@ -498,6 +498,8 @@
 								<use href="./images/icons.svg#icon-person-black-18dp-1"></use>
 							</svg>
 						</div>
+					</div>
+					<div class="form-group">
 						<label class="form-label" for="phone">
 							Phone
 						</label>
@@ -514,6 +516,8 @@
 								<use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
 							</svg>
 						</div>
+					</div>
+					<div class="form-group">
 						<label class="form-label" for="email">
 							Email
 						</label>
@@ -530,6 +534,8 @@
 								<use href="./images/icons.svg#icon-email-black-18dp-1"></use>
 							</svg>
 						</div>
+					</div>
+					<div class="form-group">
 						<label class="form-label" for="comment">
 							Comment
 							<textarea
@@ -541,22 +547,25 @@
 								required
 							></textarea>
 						</label>
+					</div>
+					<div class="form-group">
 						<div class="checkbox-container">
-							<input
-								type="checkbox"
-								class="form-input"
-								name="terms"
-								id="terms"
-								required
-							/>
-							<svg width="10" height="8" class="icon">
-								<use href="./images/icons.svg#icon-Vector-1"></use>
-							</svg>
+								<input
+									type="checkbox"
+									class="form-input"
+									name="terms"
+									id="terms"
+									required
+								/>
+								<svg width="10" height="8" class="icon">
+									<use href="./images/icons.svg#icon-Vector-1"></use>
+								</svg>
+							</div>
+							<label class="form-label terms" for="terms">
+								I accept the terms and conditions of the
+								<a href="">Privacy Policy</a>
+							</label>
 						</div>
-						<label class="form-label terms" for="terms">
-							I accept the terms and conditions of the
-							<a href="">Privacy Policy</a>
-						</label>
 					</div>
 					<button type="submit">Send</button>
 				</form>
