--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
 						</div>
 					</div>
 					<div class="form-group">
-						<label class="form-label" for="phone">
+						<label class="form-label" for="user-phone">
 							Phone
 						</label>
 						<div class="input-container">
@@ -498,7 +498,7 @@
 								class="form-input"
 								placeholder=""
 								name="phone"
-								id="phone"
+								id="user-phone"
 								required>
 							<svg width="18" height="24" class="icon">
 								<use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
@@ -506,7 +506,7 @@
 						</div>
 					</div>
 					<div class="form-group">
-						<label class="form-label" for="email">
+						<label class="form-label" for="user-email">
 							Email
 						</label>
 						<div class="input-container">
@@ -515,7 +515,7 @@
 								class="form-input"
 								placeholder=""
 								name="email"
-								id="email"
+								id="user-email"
 								required>
 							<svg width="18" height="24" class="icon">
 								<use href="./images/icons.svg#icon-email-black-18dp-1"></use>
@@ -523,13 +523,13 @@
 						</div>
 					</div>
 					<div class="form-group">
-						<label class="form-label" for="comment">
+						<label class="form-label" for="user-comment">
 							Comment
 							<textarea
 								class="form-input"
 								placeholder="Text input"
 								name="comment"
-								id="comment"
+								id="user-comment"
 								rows="5"
 								required
 							></textarea>
@@ -541,13 +541,13 @@
 								type="checkbox"
 								class="form-input"
 								name="terms"
-								id="terms"
+								id="user-privacy"
 								required>
 							<svg width="10" height="8" class="icon">
 								<use href="./images/icons.svg#icon-Vector-1"></use>
 							</svg>
 						</div>
-						<label class="form-label terms" for="terms">
+						<label class="form-label terms" for="user-privacy">
 							I accept the terms and conditions of the
 							<a href="">Privacy Policy</a>
 						</label>
