--- a/index.html
+++ b/index.html
@@ -522,9 +522,11 @@
 							</svg>
 						</div>
 					</div>
-					<div class="form-group">
+					<div class="form-group comment-group">
 						<label class="form-label" for="user-comment">
 							Comment
+						</label>
+						<div class="input-container">
 							<textarea
 								class="form-input"
 								placeholder="Text input"
@@ -533,26 +535,29 @@
 								rows="5"
 								required
 							></textarea>
-						</label>
+						</div>
 					</div>
 					<div class="form-group">
 						<div class="checkbox-container">
 							<input
 								type="checkbox"
-								class="form-input"
+								class="form-input visually-hidden"
 								name="terms"
+								value="true"
 								id="user-privacy"
 								required>
-							<svg width="10" height="8" class="icon">
-								<use href="./images/icons.svg#icon-Vector-1"></use>
-							</svg>
+							<span>
+								<svg width="10" height="8" class="icon">
+									<use href="./images/icons.svg#icon-Vector-1"></use>
+								</svg>
+							</span>
 						</div>
 						<label class="form-label terms" for="user-privacy">
 							I accept the terms and conditions of the
 							<a href="">Privacy Policy</a>
 						</label>
 					</div>
-					<button type="submit">Send</button>
+					<button class="submit" type="submit">Send</button>
 				</form>
 			</div>
 		</div>
