--- a/index.html
+++ b/index.html
@@ -529,28 +529,26 @@
 						<textarea
 							class="form-input"
 							placeholder="Text input"
-							name="comment"
+							name="user-comment"
 							id="user-comment"
 							rows="5"
 							required
 						></textarea>
 					</div>
-					<div class="form-group">
-						<div class="checkbox-container">
-							<input
-								type="checkbox"
-								class="form-input visually-hidden"
-								name="terms"
-								value="true"
-								id="user-privacy"
-								required>
+					<div class="form-group checkbox-container">
+						<input
+							type="checkbox"
+							class="form-input visually-hidden"
+							name="user-privacy"
+							value="true"
+							id="user-privacy"
+							required>
+						<label class="form-label terms" for="user-privacy">
 							<span>
 								<svg width="10" height="8" class="icon">
 									<use href="./images/icons.svg#icon-Vector-1"></use>
 								</svg>
 							</span>
-						</div>
-						<label class="form-label terms" for="user-privacy">
 							I accept the terms and conditions of the
 							<a href="">Privacy Policy</a>
 						</label>
