--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
 								</svg>
 							</span>
 							I accept the terms and conditions of the
-							<a href="">Privacy Policy</a>
+							<a href="" class="policy">Privacy Policy</a>
 						</label>
 					</div>
 					<button class="submit" type="submit">Send</button>
